Update register_books v26
